--- a/frontend/package.json
+++ b/frontend/package.json
@@ -57,6 +57,7 @@
     "bootstrap": "4.3.1",
     "classnames": "2.2.6",
     "headroom.js": "0.11.0",
+    "jsonwebtoken": "^8.5.1",
     "moment": "2.24.0",
     "node-sass": "4.13.1",
     "nouislider": "14.2.0",
